About [MOBILE KEYBOARD]: issue fixed with mobile buttons (z-index order)

--- a/src/components/slices/about_slice/about_greeting/index.scss
+++ b/src/components/slices/about_slice/about_greeting/index.scss
@@ -1,7 +1,7 @@
 @import '@/styles/variables.module.scss';
 
 #about_greeting {
-  z-index: 4;
+  z-index: 2;
   position: absolute;
   width: 100vw;
   height: 100vh;
